--- a/ServerWeb/ServerWeb.csproj
+++ b/ServerWeb/ServerWeb.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>D:\dotnet-test\DomainTest\ServerWeb\ServerWeb.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="DotNetCore.CAP" Version="3.0.3" />
     <PackageReference Include="DotNetCore.CAP.Kafka" Version="3.0.3" />
@@ -22,6 +26,11 @@
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
+
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.3.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.3.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.3.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.3.2" />
   </ItemGroup>
 
   <ItemGroup>
