添加EF和AutoMapper测试。

--- a/ServerWeb/appsettings.json
+++ b/ServerWeb/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DBConnectString":
+    "Data Source=(local);Initial Catalog=DomainTest;Integrated Security=False;User ID=sa;Password=estep;Connect Timeout=60;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
