--- a/ServerWeb/ServerWeb.csproj
+++ b/ServerWeb/ServerWeb.csproj
@@ -13,7 +13,7 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="DotNetCore.CAP" Version="3.0.3" />
     <PackageReference Include="DotNetCore.CAP.Kafka" Version="3.0.3" />
-    <PackageReference Include="DotNetCore.CAP.MySql" Version="3.0.3" />
+    <PackageReference Include="DotNetCore.CAP.SqlServer" Version="3.0.3" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.2" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="8.6.2" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
