--- a/GatewayApis/BusinessApi/Properties/launchSettings.json
+++ b/GatewayApis/BusinessApi/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "launchBrowser": false,
       "launchUrl": "business/wf",
-      "applicationUrl": "https://localhost:5021;http://localhost:5020",
+      "applicationUrl": "http://localhost:5020",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
