--- a/GatewayApis/CompanyApi/Properties/launchSettings.json
+++ b/GatewayApis/CompanyApi/Properties/launchSettings.json
@@ -3,12 +3,17 @@
   "profiles": {
     "CompanyApi": {
       "commandName": "Project",
-      "launchBrowser": false,
       "launchUrl": "company/wf",
-      "applicationUrl": "https://localhost:5011;http://localhost:5010",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5010"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/company/wf",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
