--- a/GatewayApis/CompanyApi/Properties/launchSettings.json
+++ b/GatewayApis/CompanyApi/Properties/launchSettings.json
@@ -7,7 +7,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:5010"
+      "applicationUrl": "http://192.168.1.101:5010"
     },
     "Docker": {
       "commandName": "Docker",
