--- a/GatewayApis/GateWayServer/Properties/launchSettings.json
+++ b/GatewayApis/GateWayServer/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "launchBrowser": false,
       "launchUrl": "weatherforecast",
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "http://192.168.1.101:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
