--- a/GatewayApis/GateWayServer/appsettings.json
+++ b/GatewayApis/GateWayServer/appsettings.json
@@ -3,6 +3,7 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
+      "Ocelot": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
